# CompanionBridge

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  models.py  pyproject.toml  replit.md  routes.py  setup.py  setup_admin.py  simple_processor.py
static/: script.js  style.css
templates/: admin_dashboard.html  admin_login.html  base.html  conversation_selector.html  index.html  result.html  simple_processing.html
