[project]
name = "companion-bridge"
version = "1.0.0"
description = "AI companion identity profile generator"
requires-python = ">=3.11"
dependencies = [
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "app", "routes", "models", "simple_processor"]

[tool.setuptools.packages]
find = {exclude = ["static*", "templates*", "uploads*", "results*", "instance*", "attached_assets*", "__pycache__*", "*.egg-info*"]}

[tool.setuptools.package-data]
"*" = []

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "*.orig", "*.rej", "__pycache__/*"]
